UCF-APR2.4/ftr main/force-app/main/default/objects/User/fields/Backup_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Backup_Assignment__c</fullName>
    <label>Backup Assignment</label>
    <relationshipName>Backup_Assignment</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>