UCF-APR2.4/ftr main/force-app/main/default/objects/User/fields/ftr_AllowOrderCreation__c.field-meta.xml
<CustomField>
    <fullName>ftr_AllowOrderCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Order Creation</label>
    <type>Checkbox</type>
</CustomField>