UCF-APR2.4/ftr main/force-app/main/default/objects/User/fields/My_Calendar_Link__c.field-meta.xml
<CustomField>
    <fullName>My_Calendar_Link__c</fullName>
    <label>My Calendar Link</label>
    <type>Url</type>
</CustomField>