UCF-APR2.4/ftr main/force-app/main/default/objects/User/fields/PartnerUser_pwd__c.field-meta.xml
<CustomField>
    <fullName>PartnerUser_pwd__c</fullName>
    <label>PartnerUser temp_pwd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>