UCF-APR2.4/ftr main/force-app/main/default/objects/User/fields/Sub_Agent__c.field-meta.xml
<CustomField>
    <fullName>Sub_Agent__c</fullName>
    <label>Sub-Agent</label>
    <length>40</length>
    <type>Text</type>
</CustomField>