UCF-APR2.4/ftr main/force-app/main/default/objects/User/fields/tlx__ctd_username__c.field-meta.xml
<CustomField>
    <fullName>tlx__ctd_username__c</fullName>
    <label>Click to Dial Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>