UCF-APR2.4/ftr main/force-app/main/default/objects/User/fields/View_All_Contacts__c.field-meta.xml
<CustomField>
    <fullName>View_All_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View All Contacts</label>
    <type>Checkbox</type>
</CustomField>